🚧 Set z-index to order-cta to prevent it from being overlapped

--- a/styles/constants/_z-indexes.scss
+++ b/styles/constants/_z-indexes.scss
@@ -1,4 +1,5 @@
 $product-tab-level: 30;
+$order-cta-level: 40;
 $lnb-level: 40;
 $gnb-level: 50;
 
